[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cyfi"
version = "0.1.0"
authors = [
  {name = "DrivenData", email = "info@drivendata.org"}
]
description = "CyFi is a Python package to estimate cyanobacteria density in small, inland water bodies using Sentinel-2 satellite imagery."
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[tool.black]
line-length = 99
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[project.scripts]
cyfi = "cyfi.cli:app"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=cyfi --cov-report=term --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cyfi"]
