[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cyfi"
version = "1.1.1"
authors = [
  {name = "DrivenData", email = "info@drivendata.org"}
]
description = "Estimate cyanobacteria density in small, inland water bodies using Sentinel-2 satellite imagery."
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
  "cyanobacteria",
  "harmful algal blooms",
  "HABs",
  "sentinel-2",
  "satellite imagery",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "build",
  "cloudpathlib[s3]>=0.4.1",
  "geopandas",
  "geopy",
  "GitPython",
  "gradio",
  "lightgbm",
  "loguru",
  "matplotlib<3.8.0",
  "numpy",
  "odc-stac",
  "opencv-python",
  "pandas",
  "pathlib",
  "planetary-computer",
  "platformdirs",
  "plotly",
  "pydantic>=2.0",
  "pystac",
  "pystac-client",
  "scikit-learn",
  "seaborn",
  "repro-zipfile",
  "rioxarray",
  "tqdm",
  "typer",
  "xarray[accel,io,parallel]"
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "jupyter",
  "mkdocs",
  "mkdocs-bootswatch",
  "pytest",
  "pytest-cov",
  "pytest_mock"
]

[project.urls]
"Repository" = "https://github.com/drivendataorg/cyfi"
"Documentation" = "https://cyfi.drivendata.org/"
"Bug Tracker" = "https://github.com/drivendataorg/cyfi/issues"
"Changelog" = "https://cyfi.drivendata.org/changelog/"

[tool.black]
line-length = 99
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[project.scripts]
cyfi = "cyfi.cli:app"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=cyfi --cov-report=term --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cyfi"]
